# memo-cli

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Cargo.toml.bak  NEXT.md  README.md  ROADMAP.md  TODO.md  config.example.toml  install.ps1  install.sh  providers.example.toml
.claude/: settings.local.json
.cursor/: hooks.json
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/config/: app_config.rs  providers.rs
cli/src/embedding/: model.rs
cli/src/providers/: common.rs  embed.rs  mod.rs  rerank.rs
cli/src/providers/aliyun/: embed.rs  llm.rs  mod.rs  rerank.rs
cli/src/providers/ollama/: embed.rs  rerank.rs
cli/src/providers/openai/: embed.rs  llm.rs  mod.rs
cli/src/providers/zhipu/: embed.rs  llm.rs  rerank.rs
cli/src/service/: clear.rs  delete.rs  embed.rs  init.rs  list.rs  merge.rs  search.rs  update.rs
cli/src/ui/: output.rs
crates/engine/: Cargo.toml
crates/engine/benches/: recall_eval.rs  recall_latency.rs  recall_quality.rs
crates/engine/benches/support/: latency.rs  quality.rs
crates/engine/examples/: recall_eval.rs
crates/engine/src/: config.rs  db.rs  engine.rs  eval.rs  lib.rs  model.rs  text_index.rs  types.rs  vector_index.rs
crates/engine/src/db/: connection.rs  index_jobs.rs  index_state.rs  layers.rs  mappers.rs  mod.rs  read.rs  schema.rs  search.rs  support.rs  tests.rs  write.rs
crates/engine/src/engine/: dream.rs  ingest.rs  mod.rs  recall.rs  restore.rs
crates/engine/src/engine/recall/: query.rs  ranking.rs  session.rs  session_cache.rs  strategy.rs  tests.rs
crates/engine/src/eval/: compare.rs  gate.rs
crates/engine/src/types/: config.rs  input.rs  mod.rs  recall.rs  record.rs  reports.rs
crates/engine/tests/: engine_flow.rs  eval_runner.rs
crates/local/: Cargo.toml
crates/local/src/: client.rs  lib.rs
crates/local/src/db/: table.rs
crates/model-api/: Cargo.toml
crates/model-api/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  models.rs
docs/: COMMANDS.md  DESIGN_MULTI_QUERY_SEARCH.md  DESIGN_PROVIDER_CONFIG.md  README_zh-CN.md
docs/architecture/: command-philosophy.md  final-standard-design.md  memory-engine-architecture.md
docs/superpowers/plans/: 2026-04-21-p0-documentation-alignment.md  2026-04-23-source-layout-refactor.md  2026-04-25-evaluation-and-storage-evolution.md  2026-04-26-benchmark-evaluation-suite.md
docs/superpowers/specs/: 2026-04-21-p0-documentation-alignment-design.md  2026-04-23-source-layout-refactor-design.md  2026-04-25-evaluation-and-storage-evolution-design.md  2026-04-26-benchmark-evaluation-suite-design.md
docs/zh-CN/: COMMANDS.md  README.md
evals/: README.md
evals/public/: README.md
evals/synthetic/: adversarial.json  quality.json  smoke.json  stress.json  temporal.json
hooks/Cursor/: hooks.json
local/: Cargo.toml
local/src/: client.rs
local/src/db/: metadata.rs  mod.rs
scripts/: install.ps1
skills/memo-brain/en-US/: SKILL.md  examples.md
skills/memo-brain/zh-CN/: SKILL.md  examples.md
src/: app_config.rs  cli.rs  config.rs  lmkit_adapter.rs  lmkit_extraction_adapter.rs  main.rs  output.rs  provider_runtime.rs
src/cli/: args.rs  commands.rs  mod.rs  paths.rs
src/cli/output/: common.rs  memory.rs  mod.rs  system.rs
src/config/: app_config.rs  app_home.rs  file_config.rs  mod.rs  provider_config.rs  providers.rs  templates.rs
src/db/: connection.rs  mod.rs  table.rs
src/embedding/: mod.rs  model.rs
src/llm/: client.rs  decompose.rs  mod.rs  summarize.rs  utils.rs
src/models/: memory.rs  mod.rs  schema.rs
src/parser/: markdown.rs  mod.rs
src/providers/: mod.rs  runtime.rs  status.rs
src/providers/adapters/: mod.rs  rerank.rs
src/providers/adapters/extraction/: adapter.rs  mod.rs  normalize.rs  prompt.rs
src/service/: clear.rs  context.rs  delete.rs  embed.rs  init.rs  list.rs  merge.rs  mod.rs  query.rs  search.rs  session.rs  storage_dim.rs  time_range.rs  update.rs
src/service/commands/: clear.rs  delete.rs  embed.rs  init.rs  list.rs  merge.rs  mod.rs  update.rs
src/service/search/: decompose.rs  engine.rs  merge.rs  mod.rs  multi.rs  subquery_merge.rs  types.rs
src/templates/: config.toml  providers.toml
src/ui/: README.md  mod.rs  output.rs
templates/: config.toml
tests/: global_home_cli.rs
types/: Cargo.toml  README.md
types/src/: lib.rs  models.rs  storage.rs
