[package]
name = "memo-cli"
version = "0.1.4"
edition = "2021"
authors = ["Zoranner"]
description = "Vector-based memo system with semantic search"
license = "GPL-3.0-only"

[[bin]]
name = "memo"
path = "src/main.rs"

[dependencies]
# Local crates
memo-types = { path = "crates/types" }
memo-local = { path = "crates/local" }
lmkit = { path = "crates/lmkit", features = ["full"] }

# HTTP client — rustls-tls instead of OpenSSL for musl static builds
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
console = "0.15"

# File handling
toml = "0.8"
dirs = "5"
once_cell = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"

[profile.dev]
# Fast compilation for development (explicit for clarity)
opt-level = 0
incremental = true

[profile.release]
# Balanced release build for daily use
opt-level = 2
lto = "thin"        # thin LTO: 5-10x faster than full, <5% perf loss
codegen-units = 16  # parallel codegen, utilizes multiple cores
strip = true

[profile.dist]
# Distribution build — use only when packaging: cargo build --profile dist
inherits = "release"
opt-level = 3
lto = true          # full LTO for maximum performance
codegen-units = 1   # single codegen unit for maximum optimization
