[package]
name = "memo"
version = "0.2.0"
edition = "2021"
authors = ["Zoranner"]
license = "GPL-3.0-only"

[workspace]
members = [
    "crates/engine",
    "crates/lmkit",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Zoranner"]
license = "GPL-3.0-only"

[dependencies]
anyhow.workspace = true
clap.workspace = true
memo-engine = { path = "crates/engine" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.24.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[profile.dev]
opt-level = 0
incremental = true

[profile.release]
opt-level = 2
lto = "thin"
codegen-units = 16
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
