[package]
name = "memo-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
memo-model-api = { path = "../model-api" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
