[package]
name = "memo-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hnsw_rs = "0.3.4"
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "recall_latency"
harness = false

[[bench]]
name = "recall_quality"
harness = false

[[bench]]
name = "recall_eval"
harness = false
