[package]
name = "memo-types"
version = "0.1.1"
edition = "2021"
authors = ["Zoranner"]
description = "Common types and trait definitions for memo storage backends"
license = "GPL-3.0-only"

[lib]
name = "memo_types"
path = "src/lib.rs"

[dependencies]
# 只依赖基础库，零重型依赖
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
